--- a/index.html
+++ b/index.html
@@ -51,69 +51,77 @@
   <body>
     <header class="max-w-screen-xl mx-auto mt-12">
       <!-- nav section -->
-      <nav class="">
+      <nav>
         <div
-          class="navbar bg-red-500 text-white px-3 md:px-12 py-4 rounded-full"
+          class="navbar bg-white lg:bg-red-500 text-white px-3 md:px-12 py-4 rounded-full"
         >
           <div class="navbar-start hidden lg:flex">
-            <ul class="menu menu-horizontal px-1 font-medium">
+            <ul class="menu menu-horizontal px-1 font-medium text-xl">
               <li><a>Home</a></li>
               <li tabindex="0">
-                <a href="#">About Us</a>
+                <a>About Us</a>
               </li>
               <li><a>All Fruits</a></li>
               <li><a>Shop</a></li>
             </ul>
           </div>
-          <!-- width here -->
-          <div
-            class="navbar-start flex justify-between flex-row-reverse lg:w-[500px]"
-          >
-            <div class="dropdown ml-auto">
-              <label tabindex="0" class="btn btn-ghost lg:hidden">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+          <div class="relative">
+            <!-- nav logo -->
+
+            <div class="">
+              <div class="flex items-center gap-4 cursor-pointer">
+                <img src="./images/logo.png" alt="" />
+                <h3 class="text-4xl font-semibold text-red-500">Fruit Burst</h3>
+              </div>
+            </div>
+
+            <!-- icon -->
+            <div class="navbar-end absolute left-[280px] cursor-pointer">
+              <div class="dropdown flex flex-row-reverse">
+                <label
+                  tabindex="0"
+                  class="btn lg:hidden text-gray-800 lg:bg-red-500 lg:text-white border-none"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="4"
-                    d="M4 6h16M4 12h8m-8 6h16"
-                  />
-                </svg>
-              </label>
-              <ul
-                tabindex="0"
-                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow rounded-box w-52 font-medium bg-red-500"
-              >
-                <li><a>Home</a></li>
-                <li>
-                  <a>About Us</a>
-                </li>
-                <li><a>Shop</a></li>
-                <li><a>All Fruits</a></li>
-              </ul>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M4 6h16M4 12h8m-8 6h16"
+                    />
+                  </svg>
+                </label>
+                <ul
+                  tabindex="0"
+                  class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 bg-red-500 font-medium"
+                >
+                  <li><a>Home</a></li>
+                  <li tabindex="0">
+                    <a>About Us</a>
+                  </li>
+                  <li><a>All Fruits</a></li>
+                  <li><a>Shop</a></li>
+                </ul>
+              </div>
+
+              <!-- search  -->
+              <div class="navbar-end relative hidden lg:inline-block">
+                <input
+                  class="py-4 pr-28 pl-4 rounded-full"
+                  type="text"
+                  placeholder="Search here"
+                />
+                <i
+                  class="fa-solid fa-magnifying-glass absolute text-gray-600 text-xl top-4 -right-[225px]"
+                ></i>
+              </div>
             </div>
-            <div
-              class="navbar-start lg:navbar-center w-fit flex justify-center gap-2 items-center"
-            >
-              <img src="./images/logo.png" alt="" />
-              <h3 class="text-4xl font-bold">Fruit Burst</h3>
-            </div>
-          </div>
-          <div class="navbar-end relative hidden lg:inline-block">
-            <input
-              class="p-4 rounded-full lg:w-[400px]"
-              type="text"
-              placeholder="Search here"
-            />
-            <i
-              class="fa-solid fa-magnifying-glass absolute text-gray-600 text-xl top-4 right-24"
-            ></i>
           </div>
         </div>
       </nav>
@@ -274,7 +282,7 @@
       <!-- deal of the day -->
       <section>
         <div
-          class="mt-20 lg:mt-40 flex flex-col gap-4 md:text-center md:flex-col lg:justify-between lg:flex-row items-center"
+          class="mt-10 lg:mt-40 flex flex-col gap-4 md:text-center md:flex-col lg:justify-between lg:flex-row items-center"
         >
           <div class="space-y-6 text-center lg:text-start">
             <h2 class="text-4xl font-bold">Deal of the day</h2>
@@ -546,21 +554,23 @@
       <!-- deal of the day end-->
       <!-- team section -->
       <div
-        class="hero mt-20 min-h-[calc(100vh-100px)]"
+        class="hero mt-20 min-h-[calc(100vh-100px)] rounded-lg"
         style="background-image: url('./images/team.png')"
       >
-        <div class="hero-overlay bg-opacity-60"></div>
-        <div class="hero-content text-center text-neutral-content">
+        <div class="hero-overlay bg-opacity-50 rounded-lg"></div>
+        <div class="hero-content text-center">
           <div class="">
             <h1 class="text-3xl lg:text-7xl font-bold text-center text-white">
               Meet the team section
             </h1>
-            <p class="text-center mt-10 mb-4 text-white">
+            <p class="text-center mt-10 mb-12 text-white">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical <br />
               Latin literature from 45 BC, making it over 2000 years old.
             </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 lg:gap-32"
+            >
               <!-- member-1 -->
               <div class="flex justify-center items-center flex-col mb-4">
                 <img class="mb-2 lg:mb-4" src="./images/member1.png" alt="" />
@@ -788,9 +798,6 @@
           </div>
         </div>
       </div>
-
-      <!-- extra section -->
-      <!-- extra section -->
     </footer>
   </body>
 </html>
