--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </div>
 
             <!-- icon -->
-            <div class="navbar-end absolute left-[280px] cursor-pointer">
+            <div
+              class="navbar-end absolute left-[280px] md:left-[540px] cursor-pointer"
+            >
               <div class="dropdown flex flex-row-reverse">
                 <label
                   tabindex="0"
