--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
           <div class="relative">
             <!-- nav logo -->
 
-            <div class="">
+            <div class="navbar-center">
               <div class="flex items-center gap-4 cursor-pointer">
                 <img src="./images/logo.png" alt="" />
-                <h3 class="text-4xl font-semibold text-red-500">Fruit Burst</h3>
+                <h3 class="text-4xl font-semibold text-red-500 lg:text-white">
+                  Fruit Burst
+                </h3>
               </div>
             </div>
 
@@ -101,7 +103,7 @@
                 </label>
                 <ul
                   tabindex="0"
-                  class="menu menu-sm dropdown-content mt-12 z-[1] p-2 shadow bg-base-100 rounded-box w-52 bg-red-500 font-medium"
+                  class="menu menu-sm dropdown-content mt-5 z-[1] p-2 shadow bg-base-100 rounded-box w-52 bg-red-500 font-medium"
                 >
                   <li><a>Home</a></li>
                   <li tabindex="0">
